syntax = "proto3";

package  v1;

import "google/protobuf/timestamp.proto";


option go_package = "github.com/jxlwqq/todo/api/todo/v1";


service Todo {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc List(ListRequest) returns (ListResponse);
}

message CreateRequest{
  Item item = 1;
}


message CreateResponse {
  int64 id = 1;
}

message UpdateRequest {
  Item item = 1;
}

message UpdateResponse {
  bool updated = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message DeleteResponse {
  bool deleted = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  Item item = 1;
}

message ListRequest {
}

message ListResponse {
  repeated Item items = 1;
}

message Item {
  int64 id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp remind_at = 4;
}
